# image-rotation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  HelloWorld  HelloWorld.cpp  MPIRotateImage  Makefile  RotateImage  ScaleImage  cmake_install.cmake  compile.sh  experiments.sh  mpi_rotation_image.cpp  mpi_rotation_image_optimized.cpp  rotation_image.cpp  scaling_image.cpp
