cmake_minimum_required(VERSION 2.8)
project( ImageProcessing )
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( ScaleImage scaling_image.cpp )
target_link_libraries( ScaleImage ${OpenCV_LIBS} )
add_executable( RotateImage rotation_image.cpp)
target_link_libraries( RotateImage ${OpenCV_LIBS} )
find_package( MPI REQUIRED )
add_executable( MPIRotateImage mpi_rotation_image.cpp )
include_directories(SYSTEM ${MPI_CXX_INCLUDE_PATH})
target_link_libraries( MPIRotateImage ${OpenCV_LIBS} )
target_link_libraries( MPIRotateImage ${MPI_CXX_LIBRARIES})
add_executable( HelloWorld HelloWorld.cpp )
include_directories(SYSTEM ${MPI_CXX_INCLUDE_PATH})
target_link_libraries( HelloWorld ${MPI_CXX_LIBRARIES})
